--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pandas>=2.3.3",
     "polyline>=2.0.3",
     "spatialite>=0.0.3",
+    "tqdm>=4.67.1",
 ]
 
 [project.scripts]
