--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
     "folium>=0.20.0",
     "haversine>=2.9.0",
+    "joblib>=1.5.2",
     "loguru>=0.7.3",
     "matplotlib>=3.10.7",
     "openpyxl>=3.1.5",
