--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,13 @@ dependencies = [
     "haversine>=2.9.0",
     "loguru>=0.7.3",
     "matplotlib>=3.10.7",
+    "numpy>=2.3.4",
     "openpyxl>=3.1.5",
     "osmnx>=2.0.6",
     "pandas>=2.3.3",
     "polyline>=2.0.3",
+    "scipy>=1.16.3",
+    "seaborn>=0.13.2",
     "spatialite>=0.0.3",
     "tqdm>=4.67.1",
 ]
