--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "osmnx>=2.0.6",
     "pandas>=2.3.3",
     "polyline>=2.0.3",
+    "scikit-learn>=1.7.2",
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
     "spatialite>=0.0.3",
